RESOLVED FIXED235089
[iOS] Page loading hangs for ~10s on WebProcess launch
https://bugs.webkit.org/show_bug.cgi?id=235089
Summary [iOS] Page loading hangs for ~10s on WebProcess launch
Jer Noble
Reported 2022-01-11 17:34:36 PST
[iOS] Page loading hangs for ~10s on WebProcess launch
Attachments
Patch (10.18 KB, patch)
2022-01-11 18:09 PST, Jer Noble
no flags
Jer Noble
Comment 1 2022-01-11 18:09:12 PST
Jer Noble
Comment 2 2022-01-11 18:09:36 PST
EWS
Comment 3 2022-01-12 10:18:27 PST
Committed r287930 (245962@main): <https://commits.webkit.org/245962@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448897 [details].
Note You need to log in before you can comment on or make changes to this bug.