Source/WebKit/WebProcess/WebPage/gtk/WebPageGtk.cpp
@@ -54,7 +54,7 @@
 namespace WebKit {
 using namespace WebCore;
 
-void WebPage::platformInitialize()
+void WebPage::platformInitialize(const WebPageCreationParameters&)
 {
 #if ENABLE(ACCESSIBILITY)
     // Create the accessible object (the plug) that will serve as the
